XX/XX/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.2.1 'Harding Grim':
	- (in progress) DTLS scaleability
	- (in progress) DTLS support in Cygwin
	- TODO: --pidfile
	- Issue 52 (RFC 6062) fixed

08/11/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.1.4 'Harding Grim':
	- UDP memory leak fixed.
	
08/11/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.1.3 'Harding Grim':
	- DTLS crash fix.
	
08/10/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.1.2 'Harding Grim':
	- TLS buffer decreased to avoid memory problems.
	- TLS BIO object fix.
	- UDP socket open/reopen process fixed.
	
08/08/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.1.1 'Harding Grim':
	- Network optimization:
		* "pure" UDP setup optimized (when no DTLS configured);
		* Auxiliary listening endpoints (configured by 
			--aux-server=<ip:port>).
		* --udp-self-balance option to balance the UDP traffic 
			among the aux endpoints (for clients supporting 
			300 ALTERNATE-SERVER response).
	- Security improvements:
        * no authentication required on the load balancer server (Issue 50).
		* REST API improvement:
			= --secret-ts-exp-time option deprecated; 
			= In REST API timestamp, we are now using 
				the expiration time (Issue 31).
		* Configurable cipher suite in the TURN server.
		* SSL3 support.
		* TLS 1.1 and 1.2 support.
		* SSL2 "encapsulation" mode support.
		* NULL OpenSSL cipher is allowed to be negotiated between
			server and client.
		* -U option (NULL cipher) added to the test client.
		* DTLS crash fixed on overload.
	- STUN enhancements and fixes:
		* Classic STUN transaction ID fixed (Issue 48).
		* Classic STUN attribute ERROR fixed (Issue 49).
		* Unused RFC 5780 functionality removed from TCP, TLS and DTLS relays.
		* resources optimization for stun-only: short connection expiration time.
	
07/26/2013 Oleg Moskalenko <mom040267@gmail.com>,
			Vladimir Tsanev <tsachev@gmail.com>
Version 2.5.2.1 'Shivers':
	- log file placement changes.